<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="name">Page_1</string>
    <string name="str_1">Name</string>
    <string name="str_2">Class</string>
    <string name="str_3">Student_ID</string>
    <string name="str_4">Finish</string>
    <string name="Temp_tv1_textname">温度转换</string>
    <string name="Temp_inp1">请输入温度值(以C或F结尾)</string>
    <string name="Temp_btn1">转换</string>
    <string name="Temp_tv2_result">结果</string>
    <string name="Temp_tv3">Hello</string>
    <string name="Record_tv1">Team A</string>
    <string name="Record_tv2">0</string>
    <string name="Record_btn1">+3 points</string>
    <string name="Record_btn2">+2 points</string>
    <string name="Record_btn3">+1 points</string>
    <string name="Record_btn4">reset</string>
    <string name="Record_tv3">Record Score</string>
    <string name="team_b">Team B</string>
    <string name="Rate_ed1">Please input rmb number</string>
    <string name="Rate_tv1">结果：</string>
    <string name="Rate_btn1">Dollar</string>
    <string name="Rate_btn2">Pound</string>
    <string name="Rate_btn3">Yen</string>
    <string name="Rate_tv2">汇率转换</string>
    <string name="Rate_btnfig">config</string>
    <string name="Config_btn">Save</string>
    <string name="menu_1">vaules</string>
    <string name="Rate_menu">OpenList</string>
    <string name="inform_in">Key Word:</string>
    <string name="info_btn">commit</string>
    <string name="tv1">Title</string>
    <string name="tv2">url</string>
    <string name="fra_1">Page1</string>
    <string name="fra_2">Page2</string>
    <string name="fra_3">Page3</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tv">no data</string>
</resources>
