<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RecordScore" >

    <TextView
        android:id="@+id/R_tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/Record_tv1"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/R_tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/Record_tv2" />

    <Button
        android:id="@+id/R_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:onClick="btnAdd3"
        android:text="@string/Record_btn1" />

    <Button
        android:id="@+id/R_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:onClick="btnAdd2"
        android:text="@string/Record_btn2" />

    <Button
        android:id="@+id/R_btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:onClick="btnAdd1"
        android:text="@string/Record_btn3" />

    <Button
        android:id="@+id/R_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="btnReset"
        android:text="@string/Record_btn4" />
</LinearLayout>