<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".TempTran" >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:background="#0494A7"
        android:gravity="center"
        android:text="@string/Temp_tv1_textname"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/inpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/Temp_inp1"
        android:inputType="date|textAutoCorrect|numberSigned|textWebEditText|textMultiLine|textNoSuggestions|number|textPhonetic|textCapSentences|textAutoComplete|textImeMultiLine|numberDecimal"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/darker_gray"
        android:onClick="btnclick"
        android:text="@string/Temp_btn1"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/showText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Temp_tv2_result"
        android:layout_margin="20dp"
        android:textSize="25sp" />

</LinearLayout>